--- a/composer.json
+++ b/composer.json
@@ -6,10 +6,11 @@
     "type": "project",
     "require": {
         "php": ">=7.0.0",
-        "fideloper/proxy": "~3.3",
+        "fideloper/proxy": "^4.0",
         "guzzlehttp/guzzle": "^7.2",
-        "laravel/framework": "5.5.*",
-        "laravel/tinker": "~1.0"
+        "laravel/framework": "5.8.*",
+        "laravel/tinker": "~1.0",
+        "spatie/laravel-fractal": "^5.8"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
