--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/framework": "5.8.*",
         "laravel/passport": "7.5.1",
         "laravel/tinker": "~1.0",
+        "lcobucci/jwt": "3.3.3",
         "spatie/laravel-fractal": "^5.8"
     },
     "require-dev": {
